Fixed spacing on the footer

--- a/css/main.css
+++ b/css/main.css
@@ -68,7 +68,6 @@ footer .content {
 }
 
 footer a {
-    margin-left: 30px;
     color: #777;
 }
 
@@ -83,8 +82,7 @@ footer a:hover {
 footer div.footercolumn {
     text-align: center;
     min-width: 200px;
-    flex-basis: auto; /* default value */
-    flex-grow: 1;
+    flex: 1;
 }
 
 article {
